--- a/templates/nezx/signin.html
+++ b/templates/nezx/signin.html
@@ -25,12 +25,12 @@
 }
 
 .container {
-    max-width: 800px;
-    width: 100%;
-    padding: 20px;
+    max-width:800px;
+    width: 200%;
+    padding: 50px;
     box-sizing: border-box;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
 }
@@ -43,7 +43,7 @@
 .logo img {
     max-width: 100%;
     height: auto;
-    padding: 70px 0px 0px ;
+    padding: 50px 40px 0px 0px ;
     
 }
 
@@ -61,11 +61,12 @@
 input[type="text"],
 input[type="password"] {
     width: 100%;
-    padding: 12px;
-    margin-bottom: 15px;
+    padding: 14px 16px 14px 16px; /* Reduce padding to make the input fields smaller */
+    margin-bottom: 10px;
     border: none; /* Remove the border */
     border-bottom: 1px solid #ccc; /* Add bottom border to simulate underline */
     box-sizing: border-box;
+    border-radius: 5px;
     transition: border-color 0.3s ease;
     background-color: transparent; /* Make background transparent */
 }
@@ -73,12 +74,14 @@ input[type="password"] {
 input[type="text"]:focus,
 input[type="password"]:focus {
     border-bottom-color: #007bff; /* Change border color on focus */
-    outline: none;
+    outline: none; /* Remove default outline */
 }
+
 
 input[type="text"]:hover,
 input[type="password"]:hover {
-    border-bottom-color: #007bff; /* Change border color on hover */
+    border-bottom-color: #007bff; 
+    outline color: #ababab/* Change border color on hover */
 }
 
 /* Add hover effect to submit button */
@@ -137,7 +140,6 @@ button[type="submit"]:hover {
 
                 <button type="submit">Sign In</button>
             </form>
-            <a href="{% url 'admin:index' %}" class="link">Admin Dashboard</a>
         </div>
     </div>
 </body>
