--- a/templates/nezx/venform.html
+++ b/templates/nezx/venform.html
@@ -20,8 +20,8 @@
         <li class="dropdown">
           <a href="#">Master &#9662;</a>
           <div class="dropdown-content">
-            <a href="{% url 'venform' %}">Vendor</a>
-            <a href="custform.html">Customer</a>
+            <a href="#">Vendor</a>
+            <a href="#">Customer</a>
             <a href="#">State</a>
           </div>
         </li>
@@ -57,9 +57,30 @@
 
 
   <!------=======================HEADER END==========================================-->
-<!------=======================JAVAAASCRIPTS==========================================-->
 
-
-
-</body>
-</html>
+  <!---========================VENDOR FORMS============================================-->
+    
+  <form id="vendor-form" method="post">
+    {% csrf_token %}
+    <h1>Vendor Form</h1>
+    <label for="VendorName">Vendor Name:</label>
+    <input type="text" id="VendorName" name="VendorName" required>
+    <br>
+    <label for="Address">Address:</label>
+    <input type="text" id="Address" name="Address" required>
+    <br>
+    <label for="Agreement">Agreement:</label>
+    <input type="file" id="Agreement" name="Agreement" accept=".pdf, .doc, .docx" required>
+    <br>
+    <label for="AgreementDate">Agreement Date:</label>
+    <input type="date" id="AgreementDate" name="AgreementDate" required>
+    <br>
+    <label for="ExpireDate">Agreement Expire Date:</label>
+    <input type="date" id="ExpireDate" name="ExpireDate" required>
+    <br>
+    <label for="OtherFiles">Other Files:</label>
+    <input type="file" id="OtherFiles" name="OtherFiles" accept=".pdf, .doc, .docx">
+    <br>
+    <button type="submit">Submit</button>
+    <form id="vendor-form" method="post" enctype="multipart/form-data">
+</form>
